# TNAP

./: .gitignore  CMakeLists.txt  TNAP.kdev4
.kdev4/: TNAP.kdev4
audio/: Night  One Phone Guy.txt  Night  Two Phone Guy.txt  Night Three Phone Guy.txt
data/: save.txt
src/: camerast.cpp  camerast.h  custom_night_menut.cpp  custom_night_menut.h  doort.cpp  doort.h  header.h  jumpscare.h  main.cpp  menu.cpp  menut.h  officet.cpp  officet.h  parameterst.cpp  parameterst.h  telephone.cpp  telephone.h
src/animatrons/: animatront.cpp  animatront.h  bot.cpp  bot.h  brush.cpp  brush.h  light.cpp  light.h  mememan.cpp  mememan.h  papyrus.cpp  papyrus.h
src/buttons/: buttont.cpp  buttont.h  camera_buttont.cpp  camera_buttont.h  camerapanelt.cpp  camerapanelt.h  door_buttont.cpp  door_buttont.h  light_buttont.cpp  light_buttont.h  mememanbuttont.cpp  mememanbuttont.h  menu_buttont.cpp  menu_buttont.h  skip_buttont.cpp  skip_buttont.h
